--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.4.11",
     "@mui/styled-engine-sc": "^7.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "echarts": "^5.6.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
